--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,3 +13,5 @@ ebean.default = ["models.*"]
 
 # Application languages
 play.i18n.langs = ["en", "es"]
+
+play.http.parser.maxMemoryBuffer = 100MB
