Add host filters

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,3 +15,8 @@ ebean.default = ["models.*"]
 play.i18n.langs = ["en", "es"]
 
 play.http.parser.maxMemoryBuffer = 100MB
+
+
+play.filters.hosts {
+  allowed = ["."]
+}
