Add new functions

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,8 +4,8 @@ play.http.secret.key="KcV`9Wg32<Nv^]=u/noW2OwzD`k6]3lc3KL8zee[D=dVUiJopI8@lU=DdO
 
 db {
   default.driver = org.h2.Driver
-  default.url = "jdbc:h2:~/archivo.db"
-  default.username = root
+  default.url = "jdbc:h2:~/archdatabase.db"
+  default.username = sa
   default.password = ""
 }
 
